--- a/_posts/2020-11-1-lambda (2).md
+++ b/_posts/2020-11-1-lambda (2).md
@@ -1,14 +1,13 @@
 ---
-date: 2020-11-1 19:10
+date: 2020-11-1 10:00:00
 layout: post
-title: lambda表达式
+title: lambda
 subtitle: Java基础语法
 image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821648/theme8_knvabs.jpg
 optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821648/theme8_knvabs.jpg
 category: tutorial
 tags:
-  Java
-  lambda
+  - Java基础
 author: 张朝晖
 ---
 
