--- a/_posts/2020-11-1-接口与数组冒泡排序.md
+++ b/_posts/2020-11-1-接口与数组冒泡排序.md
@@ -1,9 +1,9 @@
 ---
 date: 2020-11-1 20:15:00
 layout: post
-title: lambda
+title: 接口与数组排序
 subtitle: Java基础语法
-image: https://https://www.google.com/url?sa=i&url=http%3A%2F%2Fm.win4000.com%2Fwallpaper_detail_155785_3.html&psig=AOvVaw2XJzg6YsGN4Mi35apcB6Om&ust=1604319013538000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKiXmaWo4ewCFQAAAAAdAAAAABAO
+image: http://pic1.win4000.com/wallpaper/2019-02-25/5c73a98a07ff9.jpg
 optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821648/theme8_knvabs.jpg
 category: tutorial
 tags:
