--- a/_posts/2020-11-1-接口与数组冒泡排序.md
+++ b/_posts/2020-11-1-接口与数组冒泡排序.md
@@ -3,7 +3,8 @@ date: 2020-11-1 20:15:00
 layout: post
 title: 接口与数组排序
 subtitle: Java基础语法
-image: http://pic1.win4000.com/wallpaper/2019-02-25/5c73a98a07ff9.jpg
+image: 
+http://pic1.win4000.com/wallpaper/2019-02-25/5c73a98a07ff9.jpg
 optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821648/theme8_knvabs.jpg
 category: tutorial
 tags:
