--- a/_posts/2020-11-1-lambda.md
+++ b/_posts/2020-11-1-lambda.md
@@ -3,7 +3,8 @@ date: 2020-11-1 10:00:00
 layout: post
 title: lambda
 subtitle: Java基础语法
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821648/theme8_knvabs.jpg
+image: 
+https:user-images.githubusercontent.com/67684652/97803222-a20d3480-1c83-11eb-9287-0dbcf6bb575d.jpg
 optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821648/theme8_knvabs.jpg
 category: tutorial
 tags:
