--- a/_posts/2020-11-1-接口与数组冒泡排序.md
+++ b/_posts/2020-11-1-接口与数组冒泡排序.md
@@ -5,7 +5,7 @@ title: 接口与数组排序
 subtitle: Java基础语法
 image: 
 https://user-images.githubusercontent.com/67684652/97803222-a20d3480-1c83-11eb-9287-0dbcf6bb575d.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821648/theme8_knvabs.jpg
+optimized_image: https://user-images.githubusercontent.com/67684652/97803222-a20d3480-1c83-11eb-9287-0dbcf6bb575d.jpg
 tags:
   - Java基础
 author: 张朝晖
