--- a/_posts/2020-11-1-接口与数组冒泡排序.md
+++ b/_posts/2020-11-1-接口与数组冒泡排序.md
@@ -3,10 +3,8 @@ date: 2020-11-1 20:15:00
 layout: post
 title: 接口与数组排序
 subtitle: Java基础语法
-image: 
-https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821647/theme2_ylcxxz.jpg
-optimized_image: 
-https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821647/theme2_ylcxxz.jpg
+image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559822138/theme10_xenudc.jpg
+optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559822138/theme10_xenudc.jpg
 tags:
   - Java基础
 author: 张朝晖
