--- a/_posts/2020-11-1-接口与数组冒泡排序.md
+++ b/_posts/2020-11-1-接口与数组冒泡排序.md
@@ -1,15 +1,16 @@
 ---
-date: 2020-11-1 20:15:00
+date: 2020-11-1 12:26:40
 layout: post
-title: 接口与数组排序
-subtitle: Java基础语法
-image: 
-https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559824021/theme12_e0vxlr.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559824021/theme12_e0vxlr.jpg
-category: tutorial
+title: Birds can fly, but this you knew already
+subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559825145/theme16_o0seet.jpg
+optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559825145/theme16_o0seet.jpg
+category: life
 tags:
-  - Java基础
-author: 张朝晖
+  - life
+  - tips
+author: thiagorossener
 ---
 
 1.接口属性：
