--- a/_posts/2020-11-1-接口与数组冒泡排序.md
+++ b/_posts/2020-11-1-接口与数组冒泡排序.md
@@ -1,15 +1,14 @@
 ---
 date: 2020-11-1 12:26:40
 layout: post
-title: Birds can fly, but this you knew already
-subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559825145/theme16_o0seet.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559825145/theme16_o0seet.jpg
-category: life
+title: 接口和数组冒泡排序
+subtitle: 今天又是有希望的一天
+image: https://user-images.githubusercontent.com/67684652/97805112-100b2900-1c8f-11eb-8990-cd1ffc55df09.jpg
+optimized_image: https://user-images.githubusercontent.com/67684652/97805112-100b2900-1c8f-11eb-8990-cd1ffc55df09.jpg
+category: Java基础
 tags:
-  - life
-  - tips
+  - 接口
+  - 冒泡排序
 author: thiagorossener
 ---
 
