--- a/_posts/2020-11-1-接口与数组冒泡排序.md
+++ b/_posts/2020-11-1-接口与数组冒泡排序.md
@@ -1,9 +1,10 @@
 ---
-date: 2040-11-2 12:26:40
+date: 2040-11-02 9:20:40
 layout: post
 title: 欢迎光临我的博客
 subtitle: 今天又是有希望的一天
-image: https://user-images.githubusercontent.com/67684652/97805112-100b2900-1c8f-11eb-8990-cd1ffc55df09.jpgptimized_image: https://user-images.githubusercontent.com/67684652/97805112-100b2900-1c8f-11eb-8990-cd1ffc55df09.jpg
+image: https://user-images.githubusercontent.com/67684652/97805112-100b2900-1c8f-11eb-8990-cd1ffc55df09.jpg
+optimized_image: https://user-images.githubusercontent.com/67684652/97805112-100b2900-1c8f-11eb-8990-cd1ffc55df09.jpg
 category: 主页主题
 tags:
   - 主题
