--- a/_posts/2020-11-1-Java基础.md
+++ b/_posts/2020-11-1-Java基础.md
@@ -19,9 +19,12 @@ author: 张朝晖
 就是一个代码块，以及必须传入代码的变量规范
 
 注意几点：
-  -：即使lambda表达式没有参数，依然要提供空括号
-  -：如果可以推导出一个lambda表达式的参数类型，则可以忽略其类型
+  -：即使lambda表达式没有参数，依然要提供空括号  
+
+  -：如果可以推导出一个lambda表达式的参数类型，则可以忽略其类型 
+
   -：如果方法只有一个参数，而且这个参数的类型可以推导得出。那么甚至还可以省略小括号
+
   -：无需指定lambda表达式的返回类型
 
 重点：对于只有一个抽象方法的接口，需要这种接口的对象时，就可以提供一个lambda表达式，这种接口称为函数式接口，由于lambda表达式可以转换为接口，使得他很有用。
@@ -108,13 +111,19 @@ public class TimerTest
 
 # 2.接口
 
-1.接口属性：
-         -：接口不是类，尽管不能创造接口的实例，但是能声明接口变量
-         -：接口变量必须引用实现了接口的类对象
-         -：检查是否实现：if(anobject instanceof Camparable)
-         -:   接口扩展：接口可扩展接口，接口1 extends 接口2
-         -：接口中不能包含实例字段，但可以包含常量
-         -：接口中的方法默认public，字段默认public static final
+## 1.接口属性
+
+​         -：接口不是类，尽管不能创造接口的实例，但是能声明接口变量         
+
+​         -：接口变量必须引用实现了接口的类对象
+
+​         -：检查是否实现：if(anobject instanceof Camparable)
+
+​         -:   接口扩展：接口可扩展接口，接口1 extends 接口2
+
+​         -：接口中不能包含实例字段，但可以包含常量 
+
+​         -：接口中的方法默认public，字段默认public static final
 
 为什么需要接口：在Java中一个类只能继承一个类，而一个类却可以继承多个接口，这为定义类的行为提供了极大的灵活性！
 
@@ -125,80 +134,94 @@ public class TimerTest
 
 具体代码：
 
-    package Interface;
-    
-    public class DefaultRun
+```java
+package Interface;
+
+public class DefaultRun
+{
+    public static void main(String[] args)
     {
-        public static void main(String[] args)
-        {
-            var MyTest=new DefaultTest();
-            int value=MyTest.cal(4,3);//调用DefaultTest从calculate中拿来的方法
-            int value1=MyTest.test(2,8);//实例可以调用calculate中的默认方法
-            System.out.println("value="+value+",value1="+value1);
-        }
+        var MyTest=new DefaultTest();
+        int value=MyTest.cal(4,3);//调用DefaultTest从calculate中拿来的方法
+        int value1=MyTest.test(2,8);//实例可以调用calculate中的默认方法
+        System.out.println("value="+value+",value1="+value1);
     }
+}
+
+```
+
+```java
+package Interface;
+
+public class DefaultTest implements calculate
+{
+    public int cal(int x,int y)
+    {
+        int z;
+        z=x+y;
+        return z;
+    }
+}
+```
+
+```java
+package Interface;
+
+public interface calculate
+{
+    int cal(int x, int y);
+
+    default int test(double x, double y)//默认实现，在DefaultTest中可被调用：实例.test(a,b)
+    {
+        x=2*y;
+        return (int) x;
+    }
+}
+
+```
+## 默认方法冲突原则
+
+​      -：超类优先，如果超类提供了一个具体方法，同名而且有相同参数类型的默认方法将会被忽略
+​      -：两个接口的默认方法冲突
 
 
-    package Interface;
-    
-    public class DefaultTest implements calculate
+```java
+package Interface;
+
+public interface InterfaceTest
+{
+    default String getName(){return "I am InterfaceTest!";}
+}
+interface Named
+{
+    default  String getName(){return "I am Named!";}
+}
+class Student implements  InterfaceTest,Named
+{
+    public String getName()
     {
-        public int cal(int x,int y)
-        {
-            int z;
-            z=x+y;
-            return z;
-        }
+        return InterfaceTest.super.getName();//接口默认方法冲突，在类中提供冲突的方法，选择两个冲突方法中的一个
     }
-    
-    package Interface;
-    
-    public interface calculate
+}
+class Run 
+{
+    public static void main(String[] args)
     {
-        int cal(int x, int y);
-    
-        default int test(double x, double y)//默认实现，在DefaultTest中可被调用：实例.test(a,b)
-        {
-            x=2*y;
-            return (int) x;
-        }
+        var MyTest2 = new Student();
+        String dd=MyTest2.getName();
+        System.out.println(dd);
     }
+```
 
 
-默认方法冲突原则：
-      -：超类优先，如果超类提供了一个具体方法，同名而且有相同参数类型的默认方法将会被忽略
-      -：两个接口的默认方法冲突
 
-    package Interface;
-    
-    public interface InterfaceTest
-    {
-        default String getName(){return "I am InterfaceTest!";}
-    }
-    interface Named
-    {
-        default  String getName(){return "I am Named!";}
-    }
-    class Student implements  InterfaceTest,Named
-    {
-        public String getName()
-        {
-            return InterfaceTest.super.getName();//接口默认方法冲突，在类中提供冲突的方法，选择两个冲突方法中的一个
-        }
-    }
-    class Run 
-    {
-        public static void main(String[] args)
-        {
-            var MyTest2 = new Student();
-            String dd=MyTest2.getName();
-            System.out.println(dd);
-        }
+## 回调
 
-回调：可以指定某个特定事件发生时应该采取的动作
-           例子：timer计时每隔1000ms调用接口ActionEvent中的actionPerformed方法
-         具体实现代码：
-     
+可以指定某个特定事件发生时应该采取的动作
+
+​           例子：timer计时每隔1000ms调用接口ActionEvent中的actionPerformed方法
+​         具体实现代码：
+​     
 
     package Interface;
     
