--- a/_posts/2020-11-2-音乐.md
+++ b/_posts/2020-11-2-音乐.md
@@ -14,3 +14,5 @@ author: 张朝晖
 
 
 <video controls="" autoplay="0" name="media"><source src="https://www.mboxdrive.com/5of2d-eaejr.mp3" type="audio/mpeg"></video>
+
+<video controls="" autoplay="0" name="media"><source src="https://www.mboxdrive.com/周杰伦 - 甜甜的.mp3" type="audio/mpeg"></video>
