--- a/_posts/2020-11-2-音乐.md
+++ b/_posts/2020-11-2-音乐.md
@@ -13,5 +13,4 @@ author: 张朝晖
 
 
 
-<video controls="" autoplay="1" name="media"><source src="https://www.mboxdrive.com/5of2d-eaejr.mp3" type="audio/mpeg"></video>
-
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=0&id=2390862226&auto=1&height=430"></iframe>
