--- a/_posts/2020-11-1-Java基础.md
+++ b/_posts/2020-11-1-Java基础.md
@@ -111,7 +111,7 @@ public class TimerTest
 
 # 2.接口
 
-## 1.接口属性
+## 2.1.接口属性
 
 ​         -：接口不是类，尽管不能创造接口的实例，但是能声明接口变量         
 
@@ -179,7 +179,7 @@ public interface calculate
 }
 
 ```
-## 默认方法冲突原则
+## 2.2默认方法冲突原则
 
 ​      -：超类优先，如果超类提供了一个具体方法，同名而且有相同参数类型的默认方法将会被忽略
 ​      -：两个接口的默认方法冲突
@@ -215,43 +215,45 @@ class Run
 
 
 
-## 回调
+## 2.3回调
 
 可以指定某个特定事件发生时应该采取的动作
 
-​           例子：timer计时每隔1000ms调用接口ActionEvent中的actionPerformed方法
-​         具体实现代码：
-​     
+​     例子：timer计时每隔1000ms调用接口ActionEvent中的actionPerformed方法
 
-    package Interface;
-    
-    import javax.swing.*;
-    import java.awt.*;
-    import java.awt.event.ActionEvent;
-    import java.awt.event.ActionListener;
-    import java.time.Instant;
-    
-    public class TimerTest
+​     具体实现代码：
+
+```java
+package Interface;
+
+import javax.swing.*;
+import java.awt.*;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
+import java.time.Instant;
+
+public class TimerTest
+{
+    public static void main(String[] args)
     {
-        public static void main(String[] args)
-        {
-            var listener=new TimePrinter();
-            var timer=new Timer(1000,listener);//构造一个定时器，每隔1000ms通知listener一次
-            timer.start();
-    
-            JOptionPane.showMessageDialog(null,"quit program");//第一个参数为null则对话框位于组件中央
-            System.exit(0);
-        }
+        var listener=new TimePrinter();
+        var timer=new Timer(1000,listener);//构造一个定时器，每隔1000ms通知listener一次
+        timer.start();
+
+        JOptionPane.showMessageDialog(null,"quit program");//第一个参数为null则对话框位于组件中央
+        System.exit(0);
     }
-    
-    class TimePrinter implements ActionListener//ActionListener接口：当达到指定的时间间隔，定时器就调用actionPerformed方法
+}
+
+class TimePrinter implements ActionListener//ActionListener接口：当达到指定的时间间隔，定时器就调用actionPerformed方法
+{
+    public void actionPerformed(ActionEvent event)
     {
-        public void actionPerformed(ActionEvent event)
-        {
-            System.out.println("At the tone,the time is:"+ Instant.ofEpochMilli(event.getWhen()));//eventwhen()调用会返回这个事件的时间，ofEpochMilli得到更加可读的描述
-            Toolkit.getDefaultToolkit().beep();//获得默认的工具箱发出一声铃响
-        }
+        System.out.println("At the tone,the time is:"+ Instant.ofEpochMilli(event.getWhen()));//eventwhen()调用会返回这个事件的时间，ofEpochMilli得到更加可读的描述
+        Toolkit.getDefaultToolkit().beep();//获得默认的工具箱发出一声铃响
     }
+}
+```
 
 数组顺序排序：用Arrays.sort
 
@@ -364,6 +366,8 @@ public class StringCompareTest implements Comparator<String>
 
 Process finished with exit code 0
 ```
+
+
 
 
 
