--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -1,15 +1,9 @@
 ---
 date: 2020-11-02 16:20:40
-layout: post
 title: Spring框架
-subtitle: 
-image: https://user-images.githubusercontent.com/67684652/97845568-b0ad2780-1d27-11eb-8c57-ab96dbec4cc8.jpg
-optimized_image: https://user-images.githubusercontent.com/67684652/97845568-b0ad2780-1d27-11eb-8c57-ab96dbec4cc8.jpg
-category: 框架
 tags:
   - Spring
   - Spring boot
-author: 张朝晖
 ---
 
 
@@ -18,7 +12,7 @@ author: 张朝晖
 
 
 
-
+![ChMkJlbKweaIVhCCAAFX442H38sAALGfgN6-1kAAVf7499](D:\Github博客\images\ChMkJlbKweaIVhCCAAFX442H38sAALGfgN6-1kAAVf7499.jpg)
 
 
 
