--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -22,4 +22,71 @@ tags:
 
   而DI就是为了解决这一问题而产生的一种设计模式理念！
 
-![001](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201106100910.jpg)
+## Bean
+
+  可重复使用的软件组件，实际上Bean是一种Java类，通过封装属性和方法，成为具有某种功能或者处理某个业务的对象。在Spring中，构成应用程序主干并由Spring IoC容器管理的对象称为bean。Bean是由Spring IoC容器实例化，组装和管理的对象。否则，bean仅仅是应用程序中许多对象之一。Bean及其之间的依赖关系反映在容器使用的配置元数据中。
+
+## 容器
+
+`  org.springframework.context.ApplicationContext`接口代表Spring IoC容器，并负责实例化，配置和组装Bean。容器通过读取配置元数据获取有关要实例化，配置和组装哪些对象的指令。配置元数据以XML，Java批注或Java代码表示。它使您能够表达组成应用程序的对象以及这些对象之间的丰富相互依赖关系。
+
+![image-20201106123926522](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201106132452.png)
+
+## 配置元元素
+
+​    如上图所示，Spring IoC容器使用一种形式的配置元数据。此配置元数据表示您作为应用程序开发人员如何告诉Spring容器实例化，配置和组装应用程序中的对象。
+
+## 实例化容器
+
+提供给`ApplicationContext`构造函数的一个或多个指示位置路径的资源字符串，可让容器从各种外部资源（例如本地文件系统，Java等）中加载配置元数据`CLASSPATH`。
+
+```java
+ApplicationContext context = new ClassPathXmlApplicationContext("services.xml", "daos.xml");
+```
+
+以下示例显示了服务层对象`(services.xml)`配置文件：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <!-- services -->
+
+    <bean id="petStore" class="org.springframework.samples.jpetstore.services.PetStoreServiceImpl">
+        <property name="accountDao" ref="accountDao"/>
+        <property name="itemDao" ref="itemDao"/>
+        <!-- additional collaborators and configuration for this bean go here -->
+    </bean>
+c
+    <!-- more bean definitions for services go here -->
+
+</beans>
+```
+
+以下示例显示了数据访问对象`daos.xml`文件：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean id="accountDao"
+        class="org.springframework.samples.jpetstore.dao.jpa.JpaAccountDao">
+        <!-- additional collaborators and configuration for this bean go here -->
+    </bean>
+
+    <bean id="itemDao" class="org.springframework.samples.jpetstore.dao.jpa.JpaItemDao">
+        <!-- additional collaborators and configuration for this bean go here -->
+    </bean>
+
+    <!-- more bean definitions for data access objects go here -->
+
+</beans>
+```
+
+以上代码使用属性注入，<property>元素为属性的Setter方法所提供的功能与<constructor-arg>元素为构造器所提供的功能是一样的(<constructor-arg>元素的功能：告知Spring要将一个ID为xxx的bean引用传递到XXXX的构造器中)，这里是将ID为accountDao和itemDao的bean(通过Ref属性)，将其注入petStore中。Id和ref元素之间的这种链接表达了协作对象之间的依赖关系。
