--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -14,8 +14,6 @@ tags:
 
   Spring框架不会强迫让你实现Spring规范的接口或类，因为这会导致应用与框架绑死，在基于Spring构建的应用中，一个类会使用Spring注解，但它依然是POJO(plain ordinary Java object),这个类在Spring和非Spring应用中都发挥同样的作用。而Spring通过DI(依赖注入)来装配他们，帮助应用对象彼此之间保持松散耦合。
 
-![](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201106095348.jpeg)
-
 # DI
 
   试想：你的应用之中有许多类，这些类之间互相进行协作来完成特定的业务逻辑，每个对象负责管理与自己相互协作的对象的引用，这会导致类与类之间高度耦合，从而导致问题出现时牵一发而动全身。
@@ -89,4 +87,4 @@ c
 </beans>
 ```
 
-以上代码使用属性注入，<property>元素为属性的Setter方法所提供的功能与<constructor-arg>元素为构造器所提供的功能是一样的(<constructor-arg>元素的功能：告知Spring要将一个ID为xxx的bean引用传递到XXXX的构造器中)，这里是将ID为accountDao和itemDao的bean(通过Ref属性)，将其注入petStore中。Id和ref元素之间的这种链接表达了协作对象之间的依赖关系。
+以上代码使用属性注入，<property>元素为属性的Setter方法所提供的功能与<constructor-arg>元素为构造器所提供的功能是一样的(<constructor-arg>元素的功能：告知Spring要将一个ID为xxx的bean引用传递到XXXX的构造器中)，这里是将ID为accountDao和itemDao的bean(通过Ref属性)，将其注入petStore中。**Id和ref元素之间的这种链接表达了协作对象之间的依赖关系**。
