--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -20,9 +20,15 @@ tags:
 
   而DI就是为了解决这一问题而产生的一种设计模式理念！
 
+  依赖注入（DI）是一个过程，通过该过程，对象只能通过构造函数参数，工厂方法的参数或在构造或创建对象实例后在对象实例上设置的属性来定义其依赖关系（即，与它们一起工作的其他对象）。从工厂方法返回。然后，容器在创建bean时注入那些依赖项。从根本上讲，此过程是通过使用类的直接构造或服务定位器模式来控制bean自身依赖关系的实例化或位置的bean本身的逆过程（因此称为 Inversion of Control）。
+
+  使用DI原理，代码更简洁，当为对象提供依赖项时，去耦合会更有效。该对象不查找其依赖项，并且不知道依赖项的位置或类。结果，您的类变得更易于测试，尤其是当依赖项依赖于接口或抽象基类时，它们允许在单元测试中使用stub(*是指用来替换一部分功能的程序段。桩程序可以用来模拟已有程序的行为,或是对将要开发的代码的一种临时替代*)或模拟实现。
+
 ## Bean
 
   可重复使用的软件组件，实际上Bean是一种Java类，通过封装属性和方法，成为具有某种功能或者处理某个业务的对象。在Spring中，构成应用程序主干并由Spring IoC容器管理的对象称为bean。Bean是由Spring IoC容器实例化，组装和管理的对象。否则，bean仅仅是应用程序中许多对象之一。Bean及其之间的依赖关系反映在容器使用的配置元数据中。
+
+  Bean定义实质上是创建一个或多个对象的方法。 容器在被询问时会查看命名bean的方法，并使用该bean定义的封装配置元数据来创建（或获取）实际对象。
 
 ## 容器
 
