--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -6,10 +6,6 @@ tags:
   - Spring boot
 ---
 
-[TOC]
-
-
-
 # Spring的优势
 
   Spring框架不会强迫让你实现Spring规范的接口或类，因为这会导致应用与框架绑死，在基于Spring构建的应用中，一个类会使用Spring注解，但它依然是POJO(plain ordinary Java object),这个类在Spring和非Spring应用中都发挥同样的作用。而Spring通过DI(依赖注入)来装配他们，帮助应用对象彼此之间保持松散耦合。
@@ -20,15 +16,17 @@ tags:
 
   而DI就是为了解决这一问题而产生的一种设计模式理念！
 
-  依赖注入（DI）是一个过程，通过该过程，对象只能通过构造函数参数，工厂方法的参数或在构造或创建对象实例后在对象实例上设置的属性来定义其依赖关系（即，与它们一起工作的其他对象）。从工厂方法返回。然后，容器在创建bean时注入那些依赖项。从根本上讲，此过程是通过使用类的直接构造或服务定位器模式来控制bean自身依赖关系的实例化或位置的bean本身的逆过程（因此称为 Inversion of Control）。
+ 依赖注入（DI）是一个过程，通过该过程，对象只通过构造函数参数、工厂方法的参数或在对象实例构造或从工厂方法返回后在对象实例上设置的属性来定义其依赖项（即，它们与之一起工作的其他对象）。然后，容器在创建bean时注入那些依赖项。从根本上讲，此过程是通过使用类的直接构造或服务定位器模式来控制bean自身依赖关系的实例化或位置的bean本身的逆过程（*因此称为 Inversion of Control*）。
 
   使用DI原理，代码更简洁，当为对象提供依赖项时，去耦合会更有效。该对象不查找其依赖项，并且不知道依赖项的位置或类。结果，您的类变得更易于测试，尤其是当依赖项依赖于接口或抽象基类时，它们允许在单元测试中使用stub(*是指用来替换一部分功能的程序段。桩程序可以用来模拟已有程序的行为,或是对将要开发的代码的一种临时替代*)或模拟实现。
 
 ## Bean
 
-  可重复使用的软件组件，实际上Bean是一种Java类，通过封装属性和方法，成为具有某种功能或者处理某个业务的对象。在Spring中，构成应用程序主干并由Spring IoC容器管理的对象称为bean。Bean是由Spring IoC容器实例化，组装和管理的对象。否则，bean仅仅是应用程序中许多对象之一。Bean及其之间的依赖关系反映在容器使用的配置元数据中。
+  可重复使用的软件组件，实际上Java Bean是一种Java类，通过封装属性和方法，成为具有某种功能或者处理某个业务的对象。
 
-  Bean定义实质上是创建一个或多个对象的方法。 容器在被询问时会查看命名bean的方法，并使用该bean定义的封装配置元数据来创建（或获取）实际对象。
+  在Spring中，构成应用程序主干并由Spring IoC容器管理的对象称为bean。Bean是由Spring IoC容器实例化，组装和管理的对象。否则，bean仅仅是应用程序中许多对象之一。Bean及其之间的依赖关系反映在容器使用的配置元数据中。
+
+  Bean定义实质上是创建一个或多个对象的方法。 容器在被询问时会查看命名bean的方法，并使用该bean定义的封装配置元数据来创建（*或获取*）实际对象。
 
 ## 容器
 
@@ -42,7 +40,7 @@ tags:
 
 ## 实例化容器
 
-提供给`ApplicationContext`构造函数的一个或多个指示位置路径的资源字符串，可让容器从各种外部资源（例如本地文件系统，Java等）中加载配置元数据`CLASSPATH`。
+提供给`ApplicationContext`构造函数的一个或多个指示位置路径的资源字符串，可让容器从各种外部资源（*例如本地文件系统，Java等*）中加载配置元数据`CLASSPATH`。
 
 ```java
 ApplicationContext context = new ClassPathXmlApplicationContext("services.xml", "daos.xml");
@@ -94,3 +92,4 @@ c
 ```
 
 以上代码使用属性注入，<property>元素为属性的Setter方法所提供的功能与<constructor-arg>元素为构造器所提供的功能是一样的(<constructor-arg>元素的功能：告知Spring要将一个ID为xxx的bean引用传递到XXXX的构造器中)，这里是将ID为accountDao和itemDao的bean(通过Ref属性)，将其注入petStore中。**Id和ref元素之间的这种链接表达了协作对象之间的依赖关系**。
+
