--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -91,7 +91,7 @@ c
 </beans>
 ```
 
-以上代码使用属性注入，<property>元素为属性的Setter方法所提供的功能与<constructor-arg>元素为构造器所提供的功能是一样的(<constructor-arg>元素的功能：告知Spring要将一个ID为xxx的bean引用传递到XXXX的构造器中)，这里是将ID为accountDao和itemDao的bean(通过Ref属性)，将其注入petStore中,**Id和ref元素之间的这种链接表达了协作对象之间的依赖关系**。
+以上代码使用属性注入，<property>元素为属性的Setter方法所提供的功能与<constructor-arg>元素为构造器所提供的功能是一样的(<constructor-arg>元素的功能：告知Spring要将一个ID为xxx的bean引用传递到XXXX的构造器中)，这里是将ID为accountDao和itemDao的bean(通过Ref属性)，将其注入petStore中,**Id和ref元素之间的这种链接表达了协作对象之间的依赖关系**
 
 # AOP简介
 
@@ -107,7 +107,81 @@ c
 
 - 每个关注点都集中于一个地方，而不是分散到多处代码中
 
-     - 服务模板更加简洁，因为它们只包含核心功能的代码，而次要关注点发代码被转移到切面了。
+- 服务模板更加简洁，因为它们只包含核心功能的代码，而次要关注点发代码被转移到切面了。
 
-  
+## AOP术语
 
+- 通知(*是什么，什么时候用*)
+- 连接点(*是一个应用执行过程中能够插入一个切面的点,可以是调用方法时、抛出异常时等等，切面代码利用这些点插入到应用的正常流程中，并添加新的行为*)
+- 切点(*何处，通常用明确的类和方法来指定这些切点*)
+- 切面(*通知和切点的结合*)
+- 引入(向已有的方法添加新方法和属性)
+- 织入(*把切面应用到目标对象并创建新的代理对象的过程*，切面在指定的连接点被织入到目标对象中)
+
+## AOP代理
+
+Spring AOP是基于代理的，理解什么是代理很重要
+
+首先考虑以下情况：您有一个普通的，未经代理的，没有特殊要求的，直接的对象引用，如以下代码片段所示 
+
+```java
+public class SimplePojo implements Pojo {
+
+    public void foo() {
+        // this next method invocation is a direct call on the 'this' reference
+        this.bar();
+    }
+
+    public void bar() {
+        // some logic...
+    }
+}
+```
+
+如果在对象引用上调用方法，则直接在该对象引用上调用该方法，如下图和清单所示：
+
+![aop代理普通pojo电话](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201106213427.png)
+
+```java
+public class Main {
+
+    public static void main(String[] args) {
+        Pojo pojo = new SimplePojo();
+        // this is a direct method call on the 'pojo' reference
+        pojo.foo();
+    }
+}
+```
+
+当客户端代码具有的引用是代理时，情况会稍有变化。考虑以下图表和代码片段：
+
+![aop代理呼叫](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201106213531.png)
+
+这里要了解的关键是，类`main(..)`方法中的客户端代码`Main`具有对代理的引用。这意味着该对象引用上的方法调用是代理上的调用。结果，代理可以委派给与该特定方法，调用相关的所有拦截器。**但是，一旦调用最终到达目标对象**（`SimplePojo`在这种情况下为引用），它可能会对自身进行的任何方法调用（例如`this.bar()`或 `this.foo()`）都将针对该`this`引用而不是代理进行调用。**这意味着自调用不会导致与方法调用相关联的通知得到运行的机会。**
+
+## Spring对AOP的支持
+
+  创建切点来定义切面所织入的连接点是AOP框架的基本功能。Spring提供了4种类型的AOP支持：
+
+- 基于代理的经典Spring AOP;
+- 纯POJO切面
+- @AspectJ注解驱动的切面
+- 注入式AspectJ切面（适用于Spring各版本）
+
+前三种都是Spring AOP实现的变体，Spring AOP构建在动态代理基础之上，因此，Spring对AOP的支持局限于方法拦截。
+
+### Spring在运行时通知对象
+
+通过在代理类中包裹切面，Spring在运行期把切面织入到Spring管理的bean中。如下图所示，代理类封装了目标类，并拦截被通知方法的调用，再把调用转发给真正的目标bean。当代理拦截到方法调用时，在调用目标bean方法之前，会执行切面逻辑。
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201106215801.png)
+直到应用需要被代理的bean时，Spring才创建代理对象。如果使用的是ApplicationContext的话，在Applicationcontext从Beanfactory中加载所有bean的时候，Spring才会创建被代理的对象。因为Spring运行时才创建代理对象，所以我们不需要特殊的编译器来织入Spring AOP的切面。
+
+### Spring只支持方法级别的连接点
+
+因为Spring基于动态代理，所以Spring只支持方法连接点。这与一些其他的AOP框架是不用的，例如AspectJ和JBoss，除了方法切点，它们还提供了字段和构造器接入点。
+
+### 切点编写
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201106220044.png)
+
+如上，execution为连接点，concert.Performance.perform(...)为切点
