--- a/_posts/2020-11-2-导师任务.md
+++ b/_posts/2020-11-2-导师任务.md
@@ -2,13 +2,12 @@
 title: 导师及学校任务
 tags:
 
-  - 数据结构
-  - 算法
+  - 毕业
 ---
 
+1.汽油调和软件架构
 
-
-
+![微信图片_20201108164522](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201108164741.png)
 
 
 
