--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -4,7 +4,17 @@ tags:
   - 操作系统
 ---
 
+# 虚拟化
 
+操作系统将物理资源(如处理器、内存、磁盘)转换为更通用的、更强大，更易于使用的虚拟形式。
+
+## 虚拟化CPU
+
+操作系统将单个CPU转换成看似无限数量的CPU，从而使许多程序看似同时运行，这就是所谓的虚拟化CPU。
+
+## 虚拟化内存
+
+每个进程访问自己的私有虚拟地址空间，操作系统以某种方式映射到机器的物理内存上，一个正在运行的程序中的内存引用不会影响其他进程(或操作系统本身)的地址空间，对于正在运行的程序，他完全拥有自己的物理内存，也即，物理内存是操作系统的共享资源。
 
 
 
