--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -6,23 +6,42 @@ tags:
 
 # 虚拟化
 
-操作系统将物理资源(如处理器、内存、磁盘)转换为更通用的、更强大，更易于使用的虚拟形式。
+  操作系统将物理资源(*如处理器、内存、磁盘*)转换为更通用的、更强大，更易于使用的虚拟形式。
 
 ## 虚拟化CPU
 
-操作系统将单个CPU转换成看似无限数量的CPU，从而使许多程序看似同时运行，这就是所谓的虚拟化CPU。
+  操作系统将单个CPU转换成看似无限数量的CPU，从而使许多程序看似同时运行，这就是所谓的虚拟化CPU。
+
+### 时分共享技术
+
+  通过让一个进程只运行一个时间片，然后切换到其他进程，操作系统提供了存在多个虚拟CPU的假象。
+
+  潜在的开销就是性能损失，因为如果CPU必须共享，每个进程的运行就会慢一些。
+
+  通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU或则或网络链接)可以被许多人共享
+
+  空分技术：资源在空间上被划分给需要使用它的人
 
 ## 虚拟化内存
 
-每个进程访问自己的私有虚拟地址空间，操作系统以某种方式映射到机器的物理内存上，一个正在运行的程序中的内存引用不会影响其他进程(或操作系统本身)的地址空间，对于正在运行的程序，他完全拥有自己的物理内存，也即，物理内存是操作系统的共享资源。
+  每个进程访问自己的私有虚拟地址空间，操作系统以某种方式映射到机器的物理内存上，一个正在运行的程序中的内存引用不会影响其他进程(*或操作系统本身*)的地址空间，对于正在运行的程序，他完全拥有自己的物理内存，也即，物理内存是操作系统的共享资源。
 
+## 进程
 
+  一个进程就是一个正在执行的程序。在任何时刻，我们都可以清点它在执行过程中访问或影响的系统的不同部分，从而概括一个进程
 
+### 进程的机器状态
 
+定义：程序在运行时可以读取或更新的内容。
 
+  机器状态的组成部分：
 
+- 内存：指令存在内存中。正在运行的程序读取和写入的数据也在内存中。因此进程可以访问的内存是该进程的一部分
+- 寄存器：许多指令明确的读取或则更新寄存器，例如，程序计数器(PC)告诉我们程序即将执行哪个指令；类似的，栈指针和相关的帧指针用于管理函数参数栈，局部变量和返回地址。
 
+### 进程创建
 
+- 将代码和所有的静态数据(*例如初始化变量*)加载到内存中(*需要操作系统从磁盘中读取这些字节，并把他放在内存的某处*)，加载到进程的地址空间中。
 
 
 
