--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -1,7 +1,5 @@
 ---
 title: 计算机操作系统
-tags:
-  - 操作系统
 ---
 
 # 虚拟化
@@ -43,8 +41,17 @@ tags:
 
 - 将代码和所有的静态数据(*例如初始化变量*)加载到内存中(*需要操作系统从磁盘中读取这些字节，并把他放在内存的某处*)，加载到进程的地址空间中。
 
+- 创建和初始化栈以及执行与I/O设置相关的其他工作
 
+- 启动程序，在入口处运行，即main()，通过跳转到main()例程，OS将CPU的控制权交给新创建的进程，程序开始执行
 
+### 进程状态
+-  运行
+-  就绪
+-  阻塞
 
+![20190519185029368](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201111203147.png)
 
+  从就绪到运行意味着该进程已经被调度，从运行转移到就绪意味着该进程已经取消调度。一旦进程被阻塞，OS将保持进程的这种状态，直到发生某种事件(例如，I/O完成)，此时，进程再次转入就绪状态
 
+  例如：从磁盘读取数据或等待网络数据包时，进程会被阻塞。OS发现进程0不使用CPU并开始运行进程1。当进程1运行时，I/O完成(系统决定切不切回进程0)，将进程0移回就绪状态，最后，进程1结束，进程0运行，然后完成。
