--- a/_posts/2020-11-2-导师任务.md
+++ b/_posts/2020-11-2-导师任务.md
@@ -9,14 +9,36 @@ tags:
 
 ![微信图片_20201108164522](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201108164741.png)
 
+# OPC(OLE for process control)
 
+目标：消除自动化软件和硬件平台之间互操作性的障碍
 
+```c#
+ /// <summary>
+        /// Required designer variable.
+        /// </summary>
+        private System.ComponentModel.IContainer components = null;
+/// <summary>
+    /// Clean up any resources being used.
+    /// </summary>
+    /// <param name="disposing">true if managed resources should be disposed; otherwise, false.</param>
+    protected override void Dispose(bool disposing)
+    {
+        if (disposing && (components != null))
+        {
+            components.Dispose();
+        }
+        base.Dispose(disposing);
+    }
+```
+C#中的每一个类型都代表一种资源，而资源又分为两类：
 
+**托管资源：**由CLR管理分配和释放的资源，即由CLR里new出来的对象；
 
+**非托管资源：**不受CLR管理的对象，windows内核对象，如文件、数据库连接、套接字、COM对象等；毫无例外地，如果我们的类型使用到了非托管资源，或者需要显式释放的托管资源，那么，就需要让类型继承接口IDisposable。这相当于是告诉调用者，该类型是需要显式释放资源的，你需要调用我的Dispose方法。
 
+# 看门狗
 
-
-
-
+看门狗用于监视、管理单bai片机、dsp等ducpu的复位电路。cpu正常运行时，zhi没隔一定时间给dao看门狗一个脉冲信号，俗称“喂狗”，看门狗超过时间没有收到“喂狗”信号，输出一个脉冲给cpu的复位引脚，使cpu复位。
 
 
