--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -29,7 +29,11 @@ reading:
 
 - addiction(成瘾)
 
+成瘾的关键因素：
 
+1.耐受量：一个人对某种行为或事物上瘾取决于这种行为或事物影响他的情感的方式。人为地获取某种情形下的理想结果，越来越多地要求做出某种行为或使用某种物质，直至出现危险状况。
+
+2.戒断反应：
 
 
 
