--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -2,7 +2,7 @@
 title: 英语复习
 ---
 
-1.unit one
+# unit one
 
 单词:
 
@@ -20,28 +20,44 @@ title: 英语复习
 - 酗酒者：alcoholic
 - 最初：in the first place
 - 达到：measure up to
+- 哽咽：choked up
 
 reading:
 
 - 瓶中时光
 
-文章主要内容：母亲酗酒，父亲爱打棒球，父亲39岁去世，我因此酗酒，麻痹自己，后来作者因为肝脏问题作者进入治疗中心，后来作者戒酒成功
+  文章主要内容：母亲酗酒，父亲爱打棒球，父亲39岁去世，我因此酗酒，麻痹自己，后来作者因为肝脏问题作者进入治疗中心，后来作者戒酒成功
+
+
+
+
 
 - addiction(成瘾)
 
-成瘾的关键因素：
+key element of addiction：
 
-1.耐受量：一个人对某种行为或事物上瘾取决于这种行为或事物影响他的情感的方式。人为地获取某种情形下的理想结果，越来越多地要求做出某种行为或使用某种物质，直至出现危险状况。
+1.耐受量(tolerance)：
 
-2.戒断反应：
+  A person is drawn to(被吸引) addictive behavior or to a substance because of the way they affect his or her emotions.Tolrance means that over time ,more and more intense are substance is required to produce the  desired effect until the situation becomes hazardous.
 
+  一个人对某种行为或事物上瘾取决于这种行为或事物影响他的情感的方式。人为地获取某种情形下的理想结果，越来越多地要求做出某种行为或使用某种物质，直至出现危险状况。
 
+2.戒断反应(withdrawal)
 
+  withdrawal(戒断反应) means that an individual has a very painful physial and/or emotional reaction when the substance or behavior is stopped.
 
+Factors That Influence Addiction:
 
+- 遗传(heredity)
+  This is not to say that heredity alone is suffcient to cause an addiction.but that the specific nature of the addiction may well be influenced by genetics.
+  并不意味着仅仅遗传本身就能引起上瘾，而是说基因可能会影响成瘾的种类 。
+- 创伤(Trauma)
+- 羞耻感(shame)
+- 焦虑抑郁症(anxious depression)
 
+3.康复(Recovery)
 
-
+  The emotional issues that helped to cause the addction initially have to be addressed,and the demage to the person's life caused by the addiction must be gradually healed as much as possible.
 
 
 
