--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -91,12 +91,13 @@ title: 计算机操作系统
   2.如何切换进程，实现CPU的时分共享
   解决方法：
   1.用户模式和内核模式
-  执行系统调用的过程：用户模式->执行陷阱指令->内核模式->陷阱返回指令->用户模式
+  执行系统调用的过程：
+  用户模式->执行陷阱指令->内核模式->陷阱返回指令->用户模式
   陷阱如何知道在OS内运行哪些代码？
   通过在启动时设置陷阱表来实现。当机器启动时，他在内核模式下执行，因此可以根据需要自由配置机器硬件。操作系统要做的第一件事，就是告诉硬件在发生异常时需要运行哪些代码。
   2.时钟中断
   时钟设备可以编程为每隔几毫秒产生一次中断。产生中断时，当前正在运行的进程停止，操作系统中预先配置的中断处理程序会运行，操作系统重新获得CPU的控制权，因此他可以做他想做的事：停止当前进程，并启动另一进程。
- 3.上下文切换
+  3.上下文切换
  操作系统要做的就是为当前正在执行的进程保留一些寄存器的值，并为即将执行的进程恢复一些寄存器的值
 ### 总结
  LDE的基本思路：让你想运行的程序在CPU上运行，首先设置好硬件，以便在没有操作系统帮助的情况下限制进程可以执行的操作
@@ -108,8 +109,9 @@ title: 计算机操作系统
   一些与系统中运行的进程有关的假设
 - 调度指标：
   周转时间、响应时间
-### 多级反馈队列(Multti-level Feedback Queue)
+### 多级反馈队列(Multi-level Feedback Queue)
+
   MLFQ中有许多独立的队列，每个队列都有不同的优先级。任何时刻，一个工作只能存在与一个队列中，MLFQ总是先执行优先级高的工作。每个队列中可能有许多个工作，因此具有相同的优先级，这时采用轮转调度。MLFQ调度策略根据观察到的行为调整他的优先级
-  
+
   
 
