--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -87,13 +87,13 @@ title: 计算机操作系统
   只需要在CPU上运行程序即可。因此当OS希望启动程序时，它会在进程列表中为其创建一个进程条目，为其分配一些内存，将程序代码(从磁盘)加载到内存中，找到入口点，跳转到那里，开始运行用户的代码。
 
   存在的问题：
-  1.操作系统如何确保程序不做任何我们不希望他做的事
-  2.如何切换进程，实现CPU的时分共享
+  - 操作系统如何确保程序不做任何我们不希望他做的事
+  - 如何切换进程，实现CPU的时分共享
   解决方法：
-  1.用户模式和内核模式
+  - 用户模式和内核模式
   执行系统调用的过程：
   用户模式->执行陷阱指令->内核模式->陷阱返回指令->用户模式
-  陷阱如何知道在OS内运行哪些代码？
+  - 陷阱如何知道在OS内运行哪些代码？
   通过在启动时设置陷阱表来实现。当机器启动时，他在内核模式下执行，因此可以根据需要自由配置机器硬件。操作系统要做的第一件事，就是告诉硬件在发生异常时需要运行哪些代码。
   2.时钟中断
   时钟设备可以编程为每隔几毫秒产生一次中断。产生中断时，当前正在运行的进程停止，操作系统中预先配置的中断处理程序会运行，操作系统重新获得CPU的控制权，因此他可以做他想做的事：停止当前进程，并启动另一进程。
