--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -51,8 +51,7 @@ title: 计算机操作系统
 -  运行
 -  就绪
 -  阻塞
-
-   ​                                                                                                          ![20190519185029368](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201111210825.png)                
+                               <img src="https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201113180108.png" alt="09297314c4fd0855ef0a3aa14987314" style="zoom:67%;" />
 
   从就绪到运行意味着该进程已经被调度，从运行转移到就绪意味着该进程已经取消调度。一旦进程被阻塞，OS将保持进程的这种状态，直到发生某种事件(例如，I/O完成)，此时，进程再次转入就绪状态
 
@@ -94,11 +93,11 @@ title: 计算机操作系统
       执行系统调用的过程：
         用户模式->执行陷阱指令->内核模式->陷阱返回指令->用户模式
 
-  
+
   陷阱如何知道在OS内运行哪些代码？
 
    通过在启动时设置陷阱表来实现。当机器启动时，他在内核模式下执行，因此可以根据需要自由配置机器硬件。操作系统要做的第一件事，就是告诉硬件在发生异常时需要运行哪些代码。
-   
+
 
   2. 时钟中断
           时钟设备可以编程为每隔几毫秒产生一次中断。产生中断时，当前正在运行的进程停止，操作系统中预先配置的中断处理程序会运行，操作系统重新获得CPU的控制权，因此他可以做他想做的事：停止当前进程，并启动另一进程。
