--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -1,20 +1,20 @@
 ---
 title: 计算机操作系统
 ---
-请打开左侧目录浏览！
+​	请打开左侧目录浏览！
 
 # 虚拟化
 
-	操作系统将物理资源(*如处理器、内存、磁盘*)转换为更通用的、更强大，更易于使用的虚拟形式。
+​	操作系统将物理资源(*如处理器、内存、磁盘*)转换为更通用的、更强大，更易于使用的虚拟形式。
 
 ## 虚拟化CPU
 
-	操作系统将单个CPU转换成看似无限数量的CPU，从而使许多程序看似同时运行，这就是所谓的虚拟化CPU。
+​	操作系统将单个CPU转换成看似无限数量的CPU，从而使许多程序看似同时运行，这就是所谓的虚拟化CPU。
 
 ### 时分共享技术
 
-	通过让一个进程只运行一个时间片，然后切换到其他进程，操作系统提供了存在多个虚拟CPU的假象。
-	
+​	通过让一个进程只运行一个时间片，然后切换到其他进程，操作系统提供了存在多个虚拟CPU的假象。
+​	
 	潜在的开销就是性能损失，因为如果CPU必须共享，每个进程的运行就会慢一些。
 	
 	通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU或则或网络链接)可以被许多人共享
@@ -23,7 +23,7 @@ title: 计算机操作系统
 
 ## 虚拟化内存
 
-  每个进程访问自己的私有虚拟地址空间，操作系统以某种方式映射到机器的物理内存上，一个正在运行的程序中的内存引用不会影响其他进程(*或操作系统本身*)的地址空间，对于正在运行的程序，他完全拥有自己的物理内存，也即，物理内存是操作系统的共享资源。
+ 	每个进程访问自己的私有虚拟地址空间，操作系统以某种方式映射到机器的物理内存上，一个正在运行的程序中的内存引用不会影响其他进程(*或操作系统本身*)的地址空间，对于正在运行的程序，他完全拥有自己的物理内存，也即，物理内存是操作系统的共享资源。
 
 ## 进程
 
@@ -53,10 +53,11 @@ title: 计算机操作系统
 -  阻塞
                                
                            
+
 <img src="https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201113180108.png" alt="09297314c4fd0855ef0a3aa14987314" style="zoom:67%;" />
-  
-从就绪到运行意味着该进程已经被调度，从运行转移到就绪意味着该进程已经取消调度。一旦进程被阻塞，OS将保持进程的这种状态，直到发生某种事件(例如，I/O完成)，此时，进程再次转入就绪状态
-  
+
+​	从就绪到运行意味着该进程已经被调度，从运行转移到就绪意味着该进程已经取消调度。一旦进程被阻塞，OS将保持进程的这种状态，直到发生某种事件(例如，I/O完成)，此时，进程再次转入就绪状态
+
   例如：从磁盘读取数据或等待网络数据包时，进程会被阻塞。OS发现进程0不使用CPU并开始运行进程1。当进程1运行时，I/O完成(系统决定切不切回进程0)，将进程0移回就绪状态，最后，进程1结束，进程0运行，然后完成。
 ### 进程API
 
@@ -106,11 +107,11 @@ title: 计算机操作系统
   3. 上下文切换
        操作系统要做的就是为当前正在执行的进程保留一些寄存器的值，并为即将执行的进程恢复一些寄存器的值
 ### 总结
- 		LDE的基本思路：让你想运行的程序在CPU上运行，首先设置好硬件，以便在没有操作系统帮助的情况下限制进程可以执行的操作
+ 	LDE的基本思路：让你想运行的程序在CPU上运行，首先设置好硬件，以便在没有操作系统帮助的情况下限制进程可以执行的操作
 
 ## 进程调度
 
-  		为什么需要进程调度？进程调度解决的是什么问题？
+  	为什么需要进程调度？进程调度解决的是什么问题？
   进程调度回答的是：在特定的时间应该运行哪个进程的问题。
 
 - 工作负载假设：
@@ -119,9 +120,11 @@ title: 计算机操作系统
   周转时间、响应时间
 ### 多级反馈队列(Multi-level Feedback Queue)
 
-		MLFQ中有许多独立的队列，每个队列都有不同的优先级。任何时刻，一个工作只能存在与一个队列中，MLFQ总是先执行优先级高的工作。每个队列中可能有许多个工作，因此具有相同的优先级，这时采用轮转调度。MLFQ调度策略根据观察到的行为调整他的优先级
+​	MLFQ中有许多独立的队列，每个队列都有不同的优先级。任何时刻，一个工作只能存在与一个队列中，MLFQ总是先执行优先级高的工作。每个队列中可能有许多个工作，因此具有相同的优先级，这时采用轮转调度。MLFQ调度策略根据观察到的行为调整他的优先级
 
   
+
+
 
 
 
