--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -15,9 +15,10 @@ title: 计算机操作系统
 
 ​	通过让一个进程只运行一个时间片，然后切换到其他进程，操作系统提供了存在多个虚拟CPU的假象。
 ​	
-	潜在的开销就是性能损失，因为如果CPU必须共享，每个进程的运行就会慢一些。
-	
-	通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU或则或网络链接)可以被许多人共享
+潜在的开销就是性能损失，因为如果CPU必须共享，每个进程的运行就会慢一些。
+​	
+
+​	通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU或则或网络链接)可以被许多人共享
 
   空分技术：资源在空间上被划分给需要使用它的人
 
@@ -75,9 +76,9 @@ title: 计算机操作系统
   execpv(myargs[0],myargs);//runs word count 
   //进程调用execvp()来运行字符计数程序wc
   ```
-		exec()会从可执行程序中加载代码和静态数据，并用它覆写自己的代码段(以及静态数据），堆、栈及其及其他内存空间也会被初始化。然后操作系统就执行该程序，将参数通过argv传递给该进程。因此，它没有创建新进程，而是直接将当前运行的程序替换为不同的运行程序。
-
-这样设计API的原因：在fork()之后exec()之前，可以在运行新程序之前改变环境
+	​	exec()会从可执行程序中加载代码和静态数据，并用它覆写自己的代码段(以及静态数据），堆、栈及其及其他内存空间也会被初始化。然后操作系统就执行该程序，将参数通过argv传递给该进程。因此，它没有创建新进程，而是直接将当前运行的程序替换为不同的运行程序。
+	
+	这样设计API的原因：在fork()之后exec()之前，可以在运行新程序之前改变环境
 
 ## 机制：受限直接运行
 
