--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -1,24 +1,24 @@
 ---
 title: 计算机操作系统
 ---
-​	请打开左侧目录浏览！
+​		请打开左侧目录浏览！
 
 # 虚拟化
 
-​	操作系统将物理资源(*如处理器、内存、磁盘*)转换为更通用的、更强大，更易于使用的虚拟形式。
+​		操作系统将物理资源(*如处理器、内存、磁盘*)转换为更通用的、更强大，更易于使用的虚拟形式。
 
 ## 虚拟化CPU
 
-​	操作系统将单个CPU转换成看似无限数量的CPU，从而使许多程序看似同时运行，这就是所谓的虚拟化CPU。
+​		操作系统将单个CPU转换成看似无限数量的CPU，从而使许多程序看似同时运行，这就是所谓的虚拟化CPU。
 
 ### 时分共享技术
 
-​	通过让一个进程只运行一个时间片，然后切换到其他进程，操作系统提供了存在多个虚拟CPU的假象。
+​		通过让一个进程只运行一个时间片，然后切换到其他进程，操作系统提供了存在多个虚拟CPU的假象。
 ​	
 潜在的开销就是性能损失，因为如果CPU必须共享，每个进程的运行就会慢一些。
 ​	
 
-​	通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU或则或网络链接)可以被许多人共享
+​		通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU或则或网络链接)可以被许多人共享
 
   空分技术：资源在空间上被划分给需要使用它的人
 
@@ -28,11 +28,11 @@ title: 计算机操作系统
 
 ## 进程
 
-  一个进程就是一个正在执行的程序。在任何时刻，我们都可以清点它在执行过程中访问或影响的系统的不同部分，从而概括一个进程
+  	一个进程就是一个正在执行的程序。在任何时刻，我们都可以清点它在执行过程中访问或影响的系统的不同部分，从而概括一个进程
 
 ### 进程的机器状态
 
-定义：程序在运行时可以读取或更新的内容。
+​	定义：程序在运行时可以读取或更新的内容。
 
   机器状态的组成部分：
 
@@ -57,9 +57,9 @@ title: 计算机操作系统
 
 <img src="https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201113180108.png" alt="09297314c4fd0855ef0a3aa14987314" style="zoom:67%;" />
 
-​	从就绪到运行意味着该进程已经被调度，从运行转移到就绪意味着该进程已经取消调度。一旦进程被阻塞，OS将保持进程的这种状态，直到发生某种事件(例如，I/O完成)，此时，进程再次转入就绪状态
+​		从就绪到运行意味着该进程已经被调度，从运行转移到就绪意味着该进程已经取消调度。一旦进程被阻塞，OS将保持进程的这种状态，直到发生某种事件(例如，I/O完成)，此时，进程再次转入就绪状态
 
-  例如：从磁盘读取数据或等待网络数据包时，进程会被阻塞。OS发现进程0不使用CPU并开始运行进程1。当进程1运行时，I/O完成(系统决定切不切回进程0)，将进程0移回就绪状态，最后，进程1结束，进程0运行，然后完成。
+ 	 	例如：从磁盘读取数据或等待网络数据包时，进程会被阻塞。OS发现进程0不使用CPU并开始运行进程1。当进程1运行时，I/O完成(系统决定切不切回进程0)，将进程0移回就绪状态，最后，进程1结束，进程0运行，然后完成。
 ### 进程API
 
 - fork()系统调用：用于创建新进程
@@ -87,26 +87,28 @@ title: 计算机操作系统
   1. 性能：如何在不增加系统开销的情况下实现虚拟化
   2. 控制权：如何有效地运行进程，同时保留对CPU的控制？
 ### 受限直接执行
-  只需要在CPU上运行程序即可。因此当OS希望启动程序时，它会在进程列表中为其创建一个进程条目，为其分配一些内存，将程序代码(从磁盘)加载到内存中，找到入口点，跳转到那里，开始运行用户的代码。
+ 	 只需要在CPU上运行程序即可。因此当OS希望启动程序时，它会在进程列表中为其创建一个进程条目，为其分配一些内存，将程序代码(从磁盘)加载到内存中，找到入口点，跳转到那里，开始运行用户的代码。
 
   存在的问题：
   - 操作系统如何确保程序不做任何我们不希望他做的事
   - 如何切换进程，实现CPU的时分共享
       解决方法：
   1. 用户模式和内核模式
-      执行系统调用的过程：
+      	执行系统调用的过程：
         用户模式->执行陷阱指令->内核模式->陷阱返回指令->用户模式
 
 
   陷阱如何知道在OS内运行哪些代码？
 
-   通过在启动时设置陷阱表来实现。当机器启动时，他在内核模式下执行，因此可以根据需要自由配置机器硬件。操作系统要做的第一件事，就是告诉硬件在发生异常时需要运行哪些代码。
+   	通过在启动时设置陷阱表来实现。当机器启动时，他在内核模式下执行，因此可以根据需要自由配置机器硬件。操作系统要做的第一件事，就是告诉硬件在发生异常时需要运行哪些代码。
 
 
   2. 时钟中断
-          时钟设备可以编程为每隔几毫秒产生一次中断。产生中断时，当前正在运行的进程停止，操作系统中预先配置的中断处理程序会运行，操作系统重新获得CPU的控制权，因此他可以做他想做的事：停止当前进程，并启动另一进程。
+          	时钟设备可以编程为每隔几毫秒产生一次中断。产生中断时，当前正在运行的进程停止，操作系统中预先配置的中断处理程序会运行，操作系统重新获得CPU的控制权，因此他可以做他想做的事：停止当前进程，并启动另一进程。
+
+
   3. 上下文切换
-       操作系统要做的就是为当前正在执行的进程保留一些寄存器的值，并为即将执行的进程恢复一些寄存器的值
+           操作系统要做的就是为当前正在执行的进程保留一些寄存器的值，并为即将执行的进程恢复一些寄存器的值
 ### 总结
  	LDE的基本思路：让你想运行的程序在CPU上运行，首先设置好硬件，以便在没有操作系统帮助的情况下限制进程可以执行的操作
 
