--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -34,7 +34,7 @@ title: 计算机操作系统
 
 ​	定义：程序在运行时可以读取或更新的内容。
 
-  机器状态的组成部分：
+​	机器状态的组成部分：
 
 - 内存：指令存在内存中。正在运行的程序读取和写入的数据也在内存中。因此进程可以访问的内存是该进程的一部分
 - 寄存器：许多指令明确的读取或则更新寄存器，例如，程序计数器(PC)告诉我们程序即将执行哪个指令；类似的，栈指针和相关的帧指针用于管理函数参数栈，局部变量和返回地址。
@@ -114,8 +114,8 @@ title: 计算机操作系统
 
 ## 进程调度
 
-  	为什么需要进程调度？进程调度解决的是什么问题？
-  进程调度回答的是：在特定的时间应该运行哪个进程的问题。
+​	为什么需要进程调度？进程调度解决的是什么问题？
+​		进程调度回答的是：在特定的时间应该运行哪个进程的问题。
 
 - 工作负载假设：
   一些与系统中运行的进程有关的假设
@@ -123,7 +123,7 @@ title: 计算机操作系统
   周转时间、响应时间
 ### 多级反馈队列(Multi-level Feedback Queue)
 
-​	MLFQ中有许多独立的队列，每个队列都有不同的优先级。任何时刻，一个工作只能存在与一个队列中，MLFQ总是先执行优先级高的工作。每个队列中可能有许多个工作，因此具有相同的优先级，这时采用轮转调度。MLFQ调度策略根据观察到的行为调整他的优先级
+​		MLFQ中有许多独立的队列，每个队列都有不同的优先级。任何时刻，一个工作只能存在与一个队列中，MLFQ总是先执行优先级高的工作。每个队列中可能有许多个工作，因此具有相同的优先级，这时采用轮转调度。MLFQ调度策略根据观察到的行为调整他的优先级
 
   
 
