--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -76,7 +76,7 @@ title: 计算机操作系统
   execpv(myargs[0],myargs);//runs word count 
   //进程调用execvp()来运行字符计数程序wc
   ```
-	​	exec()会从可执行程序中加载代码和静态数据，并用它覆写自己的代码段(以及静态数据），堆、栈及其及其他内存空间也会被初始化。然后操作系统就执行该程序，将参数通过argv传递给该进程。因此，它没有创建新进程，而是直接将当前运行的程序替换为不同的运行程序。
+exec()会从可执行程序中加载代码和静态数据，并用它覆写自己的代码段(以及静态数据），堆、栈及其及其他内存空间也会被初始化。然后操作系统就执行该程序，将参数通过argv传递给该进程。因此，它没有创建新进程，而是直接将当前运行的程序替换为不同的运行程序。
 	
 	这样设计API的原因：在fork()之后exec()之前，可以在运行新程序之前改变环境
 
@@ -89,16 +89,19 @@ title: 计算机操作系统
 ### 受限直接执行
  	 只需要在CPU上运行程序即可。因此当OS希望启动程序时，它会在进程列表中为其创建一个进程条目，为其分配一些内存，将程序代码(从磁盘)加载到内存中，找到入口点，跳转到那里，开始运行用户的代码。
 
-​		存在的问题：
+存在的问题：
+
 - 操作系统如何确保程序不做任何我们不希望他做的事
+
 - 如何切换进程，实现CPU的时分共享
-  ​     解决方法：
-		1. 用户模式和内核模式
-  ​     执行系统调用的过程：
-  ​     用户模式->执行陷阱指令->内核模式->陷阱返回指令->用户模式
-  
-  陷阱如何知道在OS内运行哪些代码？
-  		通过在启动时设置陷阱表来实现。当机器启动时，他在内核模式下执行，因此可以根据需要自由配置机器硬件。操作系统要做的第一件事，就是告诉硬件在发生异常时需要运行哪些代码。
+
+
+  解决方法：
+
+  1. 用户模式和内核模式
+    执行系统调用的过程：
+    用户模式->执行陷阱指令->内核模式->陷阱返回指令->用户模式
+
 
 
   2. 时钟中断
@@ -107,6 +110,13 @@ title: 计算机操作系统
 
   3. 上下文切换
            操作系统要做的就是为当前正在执行的进程保留一些寄存器的值，并为即将执行的进程恢复一些寄存器的值
+         
+     ​     
+	
+	陷阱如何知道在OS内运行哪些代码？
+		通过在启动时设置陷阱表来实现。当机器启动时，他在内核模式下执行，因此可以根据需要自由配置机器硬件。操作系统要做的第一件事，就是告诉硬件在发生异常时需要运行哪些代码。
+	
+	​    
 ### 总结
  	LDE的基本思路：让你想运行的程序在CPU上运行，首先设置好硬件，以便在没有操作系统帮助的情况下限制进程可以执行的操作
 
