--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -1,8 +1,6 @@
 ---
 title: 计算机操作系统
 ---
- 	请打开左侧目录浏览！
-
 # 虚拟化
 
 ​		操作系统将物理资源(*如处理器、内存、磁盘*)转换为更通用的、更强大，更易于使用的虚拟形式。
@@ -15,7 +13,7 @@ title: 计算机操作系统
 
 ​		通过让一个进程只运行一个时间片，然后切换到其他进程，操作系统提供了存在多个虚拟CPU的假象。
 ​	
-潜在的开销就是性能损失，因为如果CPU必须共享，每个进程的运行就会慢一些。
+​		潜在的开销就是性能损失，因为如果CPU必须共享，每个进程的运行就会慢一些。
 ​	
 
 ​		通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU或则或网络链接)可以被许多人共享
