--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -2,7 +2,9 @@
 title: 英语复习
 ---
 
-# unit one
+# unit one(mickey's team)
+
+
 
 单词:
 
@@ -34,31 +36,65 @@ reading:
 
 - addiction(成瘾)
 
+
+
 key element of addiction：
 
-1.耐受量(tolerance)：
+1. 耐受量(tolerance)：
 
   A person is drawn to(被吸引) addictive behavior or to a substance because of the way they affect his or her emotions.Tolrance means that over time ,more and more intense are substance is required to produce the  desired effect until the situation becomes hazardous.
 
   一个人对某种行为或事物上瘾取决于这种行为或事物影响他的情感的方式。人为地获取某种情形下的理想结果，越来越多地要求做出某种行为或使用某种物质，直至出现危险状况。
 
-2.戒断反应(withdrawal)
+2. 戒断反应(withdrawal)
 
   withdrawal(戒断反应) means that an individual has a very painful physial and/or emotional reaction when the substance or behavior is stopped.
 
 Factors That Influence Addiction:
 
 - 遗传(heredity)
-  This is not to say that heredity alone is suffcient to cause an addiction.but that the specific nature of the addiction may well be influenced by genetics.
+  This is not to say that heredity alone is suffcient to cause an addiction.*but that the specific nature of the addiction may well be influenced by genetics*.
   并不意味着仅仅遗传本身就能引起上瘾，而是说基因可能会影响成瘾的种类 。
 - 创伤(Trauma)
 - 羞耻感(shame)
 - 焦虑抑郁症(anxious depression)
 
-3.康复(Recovery)
+3. 康复(Recovery)
 
   The emotional issues that helped to cause the addction initially have to be addressed,and the demage to the person's life caused by the addiction must be gradually healed as much as possible.
 
+# unit two(lies and truth)
+
+words:
+
+- fidget:坐立不安
+- spot deception:发现欺骗
+- betrayaloozes:背叛
+- fingertip：手指头，指尖
+- avert：避免
+- gazes：注视，目光
+- squirm:蠕动，局促不安
+- stutter:口吃，结结巴巴
+- stereotype:刻板印象
+- dead giveaway:something that reveals you hava lied or done something wrong(*彻底揭露谎言*)
+- innate:先天，天赋
+- sniff out:嗅出
+- flipped a coin:抛硬币
+- polygraph：**测谎仪**
+- respiration rate：呼吸频率
+- 
+
+
+
+reading：
+
+- Looking for the Lie
+
+1. anyone could spot deception by paying  close enough attention,since the liar,he wrote,"chatters with his fingertips;betrayaloozes out of him at every pore."
+
+2. would be less puzzling if we had more reason to imagine that it was true.what's is ture,instead,is that there are as many ways to lie as there are liars;there's no such thing as a dead giveaway.                                                        
+
+   假设我们用更多的理性去假想一下这种想法的真实性，就会对这种看法竟能延续这么长时间感到迷惑
 
 
 
