--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -6,7 +6,7 @@ title: 英语复习
 
 
 
-单词:
+words:
 
 - 压力源：Stressor
 - 创伤：trauma
@@ -82,7 +82,17 @@ words:
 - flipped a coin:抛硬币
 - polygraph：**测谎仪**
 - respiration rate：呼吸频率
-- 
+- electrodermal skin response:皮肤电阻反应 
+- mailcious:恶意的
+- keep  Nemesis at bay:避免报复
+- trickery:诡计
+- skullduggery:欺骗，使诈
+- sleight of hand:the use of tricks and lies to achieve something.
+- cunning:巧妙的
+- empirical support:实验证据
+- delusion:虚幻，幻想
+- foolproof:完美的
+- plagued by uncertainty:充满不确定性
 
 
 
@@ -92,11 +102,27 @@ reading：
 
 1. anyone could spot deception by paying  close enough attention,since the liar,he wrote,"chatters with his fingertips;betrayaloozes out of him at every pore."
 
-2. would be less puzzling if we had more reason to imagine that it was true.what's is ture,instead,is that there are as many ways to lie as there are liars;there's no such thing as a dead giveaway.                                                        
+2. would be less puzzling if we had more reason to imagine that it was true.what's is ture,instead,**is that there are as many ways to lie as there are liars;there's no such thing as a dead giveaway. **                                                       
 
    假设我们用更多的理性去假想一下这种想法的真实性，就会对这种看法竟能延续这么长时间感到迷惑
 
+3. **concealment,obliqueness,silence,outright lying-all help to keep Nemesis at bay;all help us abide too-large helping of reality.** 
 
+4. our  primate ancestors evolved so they could engage in the **trickery**,manipulation,**skullduggry**,and **sleight** of hand needed to live in larger social groups.     
+
+5. But it would be destabilizing indeed to be stripped of the half-truths and **delusions** on which social life depends. 
+
+   若人类被剥夺了可以说些让社会生活赖以生存的半实话和虚假的话的权利，那么我们的社会将可能变得极不稳定。
+
+SUM：
+
+文章先说作者的反观点，然后批评这种观点借以引出作者的观点：谎言难测，谎言并不总是坏的，我们的社会需要谎言的存在。
+
+
+
+- There is such a thing as truth
+
+  
 
 
 
