--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -102,7 +102,7 @@ reading：
 
 1. anyone could spot deception by paying  close enough attention,since the liar,he wrote,"chatters with his fingertips;betrayaloozes out of him at every pore."
 
-2. would be less puzzling if we had more reason to imagine that it was true.what's is ture,instead,**is that there are as many ways to lie as there are liars;there's no such thing as a dead giveaway. **                                                       
+2. would be less puzzling if we had more reason to imagine that it was true.what's is ture,instead， **is that there are as many ways to lie as there are liars;there's no such thing as a dead giveaway. **                                                       
 
    假设我们用更多的理性去假想一下这种想法的真实性，就会对这种看法竟能延续这么长时间感到迷惑
 
