--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -93,6 +93,11 @@ words:
 - delusion:虚幻，幻想
 - foolproof:完美的
 - plagued by uncertainty:充满不确定性
+- bucks:美元
+- insurmountable：难以克服的，无法逾越的
+- elusive：难以捉摸
+- stumbled on:偶然
+- regardless of:不管
 
 
 
@@ -123,6 +128,12 @@ SUM：
 - There is such a thing as truth
 
   
+
+  We must proceed as though,in principle,we can find things out--even if we can't.The alternativeis unacceptable.
+
+  
+
+  SUM:借邻居小孩和我的赌约的故事，引出下文，对于真象，我们应该不断追求它，即使我们没有这个能力，止步不前也是不可取的。
 
 
 
