--- a/_posts/2020-11-2-英语复习.md
+++ b/_posts/2020-11-2-英语复习.md
@@ -107,9 +107,9 @@ reading：
 
 1. anyone could spot deception by paying  close enough attention,since the liar,he wrote,"chatters with his fingertips;betrayaloozes out of him at every pore."
 
-2. would be less puzzling if we had more reason to imagine that it was true.what's is ture,instead， **is that there are as many ways to lie as there are liars;there's no such thing as a dead giveaway. **                                                       
+2. would be less puzzling if we had more reason to imagine that it was true.what's is ture**,instead， is that there are as many ways to lie as there are liars;there's no such thing as a dead giveaway. **                                                       
 
-   假设我们用更多的理性去假想一下这种想法的真实性，就会对这种看法竟能延续这么长时间感到迷惑
+   假设我们用更多的理性去假想一下这种想法的真实性，就会对这种看法竟能延续这么长时间感到迷惑，恰恰相反，事实是有多少人说谎，就有多少说谎的方法，没有什么办法可以完全判断人们是否在撒谎。(*可以注意到，作者在下文立马给出了论据*)
 
 3. **concealment,obliqueness,silence,outright lying-all help to keep Nemesis at bay;all help us abide too-large helping of reality.** 
 
